--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body, html{
 	transition: all .3s ease-out;
 	-moz-transition: all .3s ease-out;
 	position: absolute;
-	
+
 }
 
 .menuContextual{
@@ -34,6 +34,28 @@ body, html{
 	-moz-transform: translateX(100%);
 }
 
+.head{
+	width: 100%;
+	height: 45px;
+	background-color: white;
+	position: absolute;
+	z-index: 20;
+
+	-webkit-transition: all .3s ease-out;
+	transition: all .3s ease-out;
+	-moz-transition: all .3s ease-out;
+}
+
+.head img{padding: 10px 14px;}
+
+.botonMenu{
+	width: 45px;
+	height: 45px;
+	background-color: #009b3a;
+	float: right;
+	position: relative;
+}
+
 .open-slider .menuContextual {
 	-webkit-transform:translateX(0%);
 	transform:translateX(0%);
@@ -41,6 +63,12 @@ body, html{
 }
 
 .open-slider .envoltura {
+	-webkit-transform:translateX(-280px);
+	transform:translateX(-280px);
+	-moz-transform:translateX(-280px);
+}
+
+.open-slider .head {
 	-webkit-transform:translateX(-280px);
 	transform:translateX(-280px);
 	-moz-transform:translateX(-280px);
@@ -56,25 +84,6 @@ body, html{
 	background-size:cover;
 	background-position: center center;
 	background-image: url(../img/fondoP1.jpg);
-}
-
-.head{
-	width: 100%;
-	height: 45px;
-	background-color: white;
-	position: relative;
-}
-
-.head img{
-	padding: 10px 14px;
-}
-
-.botonMenu{
-	width: 45px;
-	height: 45px;
-	background-color: #009b3a;
-	float: right;
-	position: relative;
 }
 
 h2{
