--- a/css/main.css
+++ b/css/main.css
@@ -6,21 +6,24 @@ body, html{
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+	background-color: white;
 }
 
+/* --- LA envoltura General ---  */
 .envoltura{
 	-webkit-transition: all .3s ease-out;
 	transition: all .3s ease-out;
 	-moz-transition: all .3s ease-out;
-	position: absolute;
+	
 
 }
 
+/* --- El Menu contextual ---  */
 .menuContextual{
 	z-index: 99;
 	height: 100%;
 	width: 280px;
-	background-color: #ccc;
+	background-color: #fff;
 	position: fixed;
 	right: 0px;
 	bottom: 0px;
@@ -34,6 +37,37 @@ body, html{
 	-moz-transform: translateX(100%);
 }
 
+.menuContextual ul.contextual{
+	width: 100%;
+	overflow: hidden;
+	background-color: white;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.menuContextual ul.contextual > li{
+	width: 100%;
+	height: 80px;
+}
+
+.menuContextual ul.contextual > li > a{
+	text-decoration: none;
+	display: block;
+	line-height: 80px;
+
+	box-sizing: border-box;
+
+	padding-left: 22px;
+	border-bottom: 1px solid green;
+
+	color : #009b3a;
+	font-size: 22px;
+	font-family: 'omnesmedium';
+}
+
+
+/* --- La cabecera ---  */
 .head{
 	width: 100%;
 	height: 45px;
@@ -74,6 +108,8 @@ body, html{
 	-moz-transform:translateX(-280px);
 }
 
+/* --- LAS SSECCIONES ---  */
+
 #section0{
 	background-size:cover;
 	background-position: center center;
@@ -86,14 +122,14 @@ body, html{
 	background-image: url(../img/fondoP1.jpg);
 }
 
-h2{
+h2.subTituloHome{
 	font-family: 'omneslight';
-	font-size: 20px;
+	font-size: 23px;
 	color:#4b4b4b;
-	padding: 20px 0px 0px 14px;
+	padding: 50px 0px 0px 14px;
 }
 
-h1{
+h1.tituloHome{
 	font-family: 'omnesmedium';
 	color: #009b3a;
 	font-size: 32px;
@@ -101,17 +137,33 @@ h1{
 	margin-top: -10px;
 }
 
+h1.tituloVideos{
+	font-family: 'omnesmedium';
+	color: #9c5fb5;
+	font-size: 32px;
+	padding: 26px 0px 0px 14px;
+	line-height: 32px;
+}
 
+h2.subTituloVideo{
+	font-family: 'omneslight';
+	font-size: 14px;
+	color:#4b4b4b;
+	padding: 0px 0px 0px 14px;
+	width: 90%;
+	margin-top: -14px;
+	line-height: 18px;
+}
 
+/* -- el call para el home */
 .callTo{
 	width: 74%;
 	height: 12%;
 	display: block;
 	margin-left: 14px;
-	position: absolute;
+	position: relative;
 	border-radius: 8px;
 	color: white;
-	top: 50%;
 }
 
 .callTo img{
@@ -119,4 +171,66 @@ h1{
 	display: none;
 	width: 100%;
 	height: auto;
+}
+
+/* -- el call para Internas */
+.callToInternas{
+	width: 74%;
+	height: 12%;
+	display: block;
+	margin-left: -37%;
+	left: 50%;
+	bottom: 40px;
+	position: absolute;
+	border-radius: 8px;
+	color: white;
+	z-index: 20;
+}
+
+.callToInternas img{
+	position: absolute;
+	display: none;
+	width: 100%;
+	height: auto;
+}
+
+.arrowGreen{
+	width: 70%;
+	padding: 14px 0px 0px 40px;
+}
+
+.arrowGreen img{
+	width: 100%;
+	height: auto;
+}
+
+.nextPag{
+	display: block;
+	width: 84px;
+	height: 84px;
+	background-color: white;
+	border-radius: 50px;
+
+	-moz-box-shadow: #515151 0px 0px 14px;
+    -webkit-box-shadow: #515151 0px 0px 14px;
+    box-shadow: #515151 0px 0px 14px;
+
+    position: absolute;
+    bottom: 36px;
+    left: 50%;
+    margin-left: -36px;
+    text-align: center;
+    padding: 18px 0px 0px 0px;
+    box-sizing: border-box;
+    color: #009b3a;
+    font-family: 'omnesmedium';
+}
+
+/* -- Navegaciones */
+.controlArrow{
+	display: none;
+}
+
+.fullPage-slidesNav{
+	margin-bottom: 120px;
 }
