--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ body, html{
 	right: 0px;
 	bottom: 0px;
 
+	border-bottom: 1px solid green;
+
 	-webkit-transition: all .3s ease-out;
 	transition: all .3s ease-out;
 	-moz-transition: all .3s ease-out;
@@ -195,6 +197,14 @@ h2.subTituloVideo{
 	line-height: 18px;
 }
 
+h1.tituloAprende{
+	font-family: 'omnesmedium';
+	color: #1970d2;
+	font-size: 26px;
+	padding: 32px 0px 0px 14px;
+	line-height: 22px;
+}
+
 /* -- el call para el home */
 .callTo{
 	width: 70%;
@@ -280,11 +290,50 @@ h2.subTituloVideo{
 
 .iframe_video {
 	width: 90%;
-	height: 140px;
+	height: 120px;
 	background-color: green;
 	margin-left: 5%;
 
 }
+
+/* Estilos Aprende */
+
+#section2 .slides{
+	margin-top: -10px;
+}
+
+
+.title{
+    margin: 0px 0px 0px 14px;
+    color:#1970d2;
+    font-size: 24px;
+    padding:0px 0px 4px 40px;
+    background: url(../img/icon_acordeon.png) no-repeat;
+}
+
+.left{
+    width: 20%;
+    float:left;
+    font-size: 14px;
+    color:#1970d2;
+    margin-left: 14px;
+}
+.right{
+    width: 70%;
+    float:left;
+    color:#313131;
+    font-size: 22px;
+    font-size: 16px;
+    line-height: 16px;
+    margin-bottom: 2px;
+}
+
+.btn_consulta{background-position: 0 -31px;}
+.btn_cuenta{background-position: 0 -96px;}
+.btn_mtarjeta{background-position: 0 -162px;}
+.btn_recibos{background-position: 0 -224px;}
+.btn_transfiere{background-position: 0 -280px;}
+.btn_pagosfre{background-position: 0 -344px;}
 
 @media only screen and (min-device-width : 321px) and (max-device-width : 720px) {
 	h2.subTituloHome{
@@ -296,6 +345,12 @@ h2.subTituloVideo{
 		font-size: 32px;
 		line-height: 33px;
 		padding: 0px 0px 10px 14px;
+	}
+
+	h1.tituloAprende{
+		font-size: 32px;
+		line-height: 33px;
+		padding: 40px 0px 10px 14px;
 	}
 
 	.callTo{
@@ -327,4 +382,36 @@ h2.subTituloVideo{
 		margin-bottom: 100px;
 		display: block;
 	}
+
+	/* Estilos Aprende */
+	.title{
+	    margin: 0px 0px 8px 14px;
+	    color:#1970d2;
+	    font-size: 26px;
+	    padding:0px 0px 2px 40px;
+	    background: url(../img/icon_acordeon.png) no-repeat;
+	}
+
+	.left{
+	    width: 22%;
+	    float:left;
+	    font-size: 20px;
+	    color:#1970d2;
+	    margin-left: 14px;
+	}
+	.right{
+	    width: 67%;
+	    float:left;
+	    color:#313131;
+	    font-size: 20px;
+	    line-height: 24px;
+	    margin-bottom: 4px;
+	}
+
+	.btn_consulta{background-position: 0 -31px;}
+	.btn_cuenta{background-position: 0 -96px;}
+	.btn_mtarjeta{background-position: 0 -162px;}
+	.btn_recibos{background-position: 0 -224px;}
+	.btn_transfiere{background-position: 0 -280px;}
+	.btn_pagosfre{background-position: 0 -344px;}
 }
