agrege anchor al boton del home para que baje a la siguiente pagina

--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,7 @@ h1.tituloPreguntas{
     box-sizing: border-box;
     color: #009b3a;
     font-family: 'omnesmedium';
+    font-size: 16px;
 }
 
 /* -- Navegaciones */
