Quitando text-decoration al ver mas del home

--- a/css/main.css
+++ b/css/main.css
@@ -333,6 +333,8 @@ h1.tituloPreguntas{
     color: #009b3a;
     font-family: 'omnesmedium';
     font-size: 16px;
+
+    text-decoration: none;
 }
 
 /* -- Navegaciones */
