--- a/css/main.css
+++ b/css/main.css
@@ -381,7 +381,7 @@ h1.tituloPreguntas{
 }
 
 #section3 .fullPage-slidesNav{
-	margin-bottom: 28px;
+	margin-bottom: 10px;
 }
 
 .iframe_video {
@@ -571,8 +571,12 @@ h1.tituloPreguntas{
 	}
 
 	.fullPage-slidesNav{
-		margin-bottom: 100px;
+		margin-bottom: 90px;
 		display: block;
+	}
+
+	#section3 .fullPage-slidesNav{
+		margin-bottom: 26px;
 	}
 	
 
