--- a/css/main.css
+++ b/css/main.css
@@ -240,7 +240,7 @@ h1.tituloHome{
 	color: #009b3a;
 	font-size: 26px;
 	/*font-size: 32px;*/
-	padding: 0px 0px 0px 14px;
+	padding: 26px 0px 0px 14px;
 	margin-top: -10px;
 	line-height: 29px;
 }
@@ -249,7 +249,7 @@ h1.tituloVideos{
 	font-family: 'omnesmedium';
 	color: #9c5fb5;
 	font-size: 19px;
-	padding: 22px 0px 0px 14px;
+	padding: 40px 0px 0px 14px;
 	line-height: 18px;
 }
 
@@ -267,7 +267,7 @@ h2.subTituloPreguntas{
 	font-family: 'omneslight';
 	font-size: 14px;
 	color:#f1ce7a;
-	padding: 0px 0px 0px 14px;
+	padding: 0px 0px 0px 5px;
 	width: 90%;
 	margin-top: 20px;
 	line-height: 18px;
@@ -277,7 +277,7 @@ h1.tituloAprende{
 	font-family: 'omnesmedium';
 	color: #0039a6;
 	font-size: 19px;
-	padding: 38px 0px 0px 14px;
+	padding: 48px 0px 0px 14px;
 	line-height: 18px;
 }
 
@@ -285,7 +285,7 @@ h1.tituloPreguntas{
 	font-family: 'omnesmedium';
 	color: #FFF;
 	font-size: 19px;
-	padding: 44px 0px 0px 14px;
+	padding: 52px 0px 0px 14px;
 	line-height: 18px;
 }
 
@@ -383,7 +383,7 @@ h1.tituloPreguntas{
 }
 
 #section3 .fp-slidesNav{
-	margin-bottom: 10px;
+	margin-bottom: 0px;
 }
 
 .iframe_video {
@@ -471,6 +471,10 @@ h1.tituloPreguntas{
   margin: 16px 0 16px 0;
 }
 
+.faqsec .slide{
+	margin-top: -10px;
+}
+
 #section3 .slides{
 	margin-top: -14px;
 }
@@ -525,7 +529,7 @@ h1.tituloPreguntas{
 	h1.tituloAprende{
 		font-size: 26px;
 		line-height: 33px;
-		padding: 40px 0px 10px 14px;
+		padding: 60px 0px 0px 14px;
 	}
 
 	.callTo{
@@ -536,7 +540,7 @@ h1.tituloPreguntas{
 
 	h1.tituloVideos{
 		font-size: 26px;
-		padding: 26px 0px 0px 14px;
+		padding: 48px 0px 0px 14px;
 		line-height: 29px;
 	}
 
@@ -561,7 +565,7 @@ h1.tituloPreguntas{
 		font-family: 'omnesmedium';
 		color: #FFF;
 		font-size: 26px;
-		padding: 44px 0px 0px 14px;
+		padding: 64px 0px 0px 14px;
 		line-height: 18px;
 		letter-spacing: -0.5px;
 	}
@@ -578,7 +582,7 @@ h1.tituloPreguntas{
 	}
 
 	#section3 .fp-slidesNav{
-		margin-bottom: 26px;
+		margin-bottom: 22px;
 	}
 	
 
@@ -614,7 +618,11 @@ h1.tituloPreguntas{
 	.btn_pagosfre{background: url(../img/iconoGuardarAzul.png) no-repeat;}
 	.btn_grabfre{background: url(../img/iconoRecargaAzul.png) no-repeat;}
 
-	#section2 .slides{
+	#section2 .fp-slides{
+		margin-top: -10px;
+	}
+
+	#section3 .slides{
 		margin-top: -16px;
 	}
 
