--- a/js/fullPage/jquery.fullPage.css
+++ b/js/fullPage/jquery.fullPage.css
@@ -67,21 +67,36 @@ html, body {
     width: 0;
     height: 0;
     border-style: solid;
-    margin-top: -38px;
+    margin-top: 16px;
     -webkit-transform: translate3d(0,0,0);
     -ms-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
 }
 .fp-controlArrow.fp-prev {
     left: 15px;
-    width: 0;
-    border-width: 38.5px 34px 38.5px 0;
-    border-color: transparent #fff transparent transparent;
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: rgba(156,95,191,0.35);
+    border: 1px solid #9c5fb5;
+    background-image: url(../../img/bg_direction_nav.png);
+    text-indent: -9999px;
+    background-position-x: -15px;
+    background-position-y: -14px;
 }
 .fp-controlArrow.fp-next {
     right: 15px;
-    border-width: 38.5px 0 38.5px 34px;
-    border-color: transparent transparent transparent #fff;
+    /*border-width: 38.5px 0 38.5px 34px;*/
+    
+    width: 50px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: rgba(156,95,191,0.35);
+    border: 1px solid #9c5fb5;
+    background-image: url(../../img/bg_direction_nav.png);
+    text-indent: -9999px;
+    background-position-x: -95px;
+    background-position-y: -14px;
 }
 .fp-scrollable {
     overflow: scroll;
