--- a/css/main.css
+++ b/css/main.css
@@ -154,12 +154,30 @@ body, html{
 	right: 0;
 }
 
+.botonMenu img{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+}
+
+.tresrayas{
+	display: block;
+}
+
+.equis{
+	display: none;
+}
+
+.dnone{display: none;}
+.dblock{display: block;}
+
+/*
 .botonMenu .raya{
 	width: 22px;
 	height: 3px;
 	position: absolute;
 
-	/*
+
 	-webkit-transition: all .5s ease-out;
 	transition: all .5s ease-out;
 	-moz-transition: all .5s ease-out;
@@ -167,9 +185,7 @@ body, html{
 	-webkit-transition-delay: 0.3s;
 	transition-delay: 0.3s;
 	-moz-transition-delay: 0.3s;
-	*/
 
-	
 }
 
 .botonMenu .raya > img{
@@ -182,6 +198,7 @@ body, html{
 
 .botonMenu #raya1{margin: 16px 2px 2px 13px;}
 .botonMenu #raya2{margin: 26px 2px 2px 13px;}
+*/
 
 .girarRaya1{
 	/*
@@ -385,10 +402,6 @@ h1.tituloPreguntas{
 	display: none!important;
 }
 
-.fp-controlArrow{
-	top:40%!important;
-}
-
 
 .fp-slidesNav{
 	margin-bottom: 62px;
@@ -540,6 +553,10 @@ h1.tituloPreguntas{
 @media screen and (device-aspect-ratio: 40/71) {
 	#section1 .fp-slidesNav{
 		margin-bottom: 70px;
+	}
+
+	.fp-controlArrow {
+		top:40%!important;
 	}
 	
 	.iframe_video {
