Se agrego un codigo en el Header a peticion de Marlon

--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body, html{
 	transition: all .3s ease-out;
 	-moz-transition: all .3s ease-out;
 	
-	position: absolute;	
+	position: absolute!important;
 
 }
 
